--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -97,12 +97,89 @@ $gray: #686868;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 70%;
-    align-items: center;
+    width: 90%;
+    padding: 5%;
+    margin: 0 5%;
 
-    h3{
+    &-one {
+      display: flex;
+      width: 100%;
+      flex-direction: column;
+      align-items: center;
+      box-shadow: 10px 10px 10px rgba(161, 161, 161, 0.3);
+      margin-right: 5%;
+
+      img {
+        color: $blue;
+        width: 30%;
+      }
+    }
+    &-two {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      box-shadow: 10px 10px 10px rgba(161, 161, 161, 0.3);
+      margin-right: 5%;
+      color: $blue;
+      img {
+        color: $blue;
+        width: 30%;
+      }
+    }
+    &-three {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 100%;
+      box-shadow: 10px 10px 10px rgba(161, 161, 161, 0.3);
+      margin-right: 5%;
+
+      img {
+        color: $blue;
+        width: 30%;
+      }
+    }
+    h3 {
       font-size: 16px;
       color: $pink;
+      margin-top: 10%;
+      margin-bottom: 10%;
     }
   }
+  &__what {
+    margin-top: 10%;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 5%;
+    position: relative;
+
+    &-left {
+      width: 80%;
+      z-index: 2;
+      p {
+        margin-top: 15%;
+        margin-left: 10%;
+        z-index: 2;
+      }
+    }
+    &-right {
+      display: flex;
+      width: 100%;
+
+      img {
+        width: 100%;
+        z-index: 2;
+      }
+    }
+  }
+}
+#background {
+  position: absolute;
+ bottom: 20%;
+  left: 0px;
+  width: 100%;
+  height: 30%;
+  background-color: $blue;
+  z-index: 1;
 }
