--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -84,38 +84,11 @@
   width: 100%;
 }
 
-.banner .inputText {
-  margin-top: 2%;
-  border: none;
-  border-radius: 5px;
-  background-color: white;
-  -webkit-box-shadow: 10px 10px 10px rgba(161, 161, 161, 0.5);
-          box-shadow: 10px 10px 10px rgba(161, 161, 161, 0.5);
-  color: gray;
-  width: 300px;
-  height: 30px;
-}
-
-.banner .button {
-  background-color: #ff298a;
-  /* Green */
-  border: none;
-  color: white;
-  border-radius: 5px;
-  padding: 5px 5px;
-  -webkit-box-shadow: 10px 10px 10px rgba(161, 161, 161, 0.5);
-          box-shadow: 10px 10px 10px rgba(161, 161, 161, 0.5);
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin-left: 3%;
-}
-
 .values {
   color: #686868;
   background-color: white;
   padding-top: 8%;
+  z-index: -3;
 }
 
 .values__title {
@@ -152,14 +125,20 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-shadow: 10px 10px 10px rgba(161, 161, 161, 0.3);
-          box-shadow: 10px 10px 10px rgba(161, 161, 161, 0.3);
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.3);
+          box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.3);
   margin-right: 5%;
 }
 
 .values__box-one img {
   color: #1bd6ff;
   width: 30%;
+  margin-top: 5%;
+}
+
+.values__box-one h3 {
+  padding: 0 10%;
 }
 
 .values__box-two {
@@ -174,8 +153,9 @@
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  -webkit-box-shadow: 10px 10px 10px rgba(161, 161, 161, 0.3);
-          box-shadow: 10px 10px 10px rgba(161, 161, 161, 0.3);
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.3);
+          box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.3);
   margin-right: 5%;
   color: #1bd6ff;
 }
@@ -183,6 +163,11 @@
 .values__box-two img {
   color: #1bd6ff;
   width: 30%;
+  margin-top: 5%;
+}
+
+.values__box-two h3 {
+  padding: 0 10%;
 }
 
 .values__box-three {
@@ -197,14 +182,20 @@
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
-  -webkit-box-shadow: 10px 10px 10px rgba(161, 161, 161, 0.3);
-          box-shadow: 10px 10px 10px rgba(161, 161, 161, 0.3);
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.3);
+          box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.3);
   margin-right: 5%;
 }
 
 .values__box-three img {
   color: #1bd6ff;
   width: 30%;
+  margin-top: 5%;
+}
+
+.values__box-three h3 {
+  padding: 0 10%;
 }
 
 .values__box h3 {
@@ -251,11 +242,152 @@
 
 #background {
   position: absolute;
-  bottom: 50%;
+  top: 50%;
   left: 0px;
   width: 100%;
-  height: 1000px;
+  height: 50%;
   background-color: #1bd6ff;
   z-index: 1;
+}
+
+.gomunch {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  color: white;
+  width: 90%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.gomunch__top {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.gomunch__bottom {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.gomunch p {
+  margin: 5%;
+  padding: 5%;
+}
+
+.newsletter {
+  color: #686868;
+  background-color: white;
+  padding: 10% 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.newsletter__box {
+  padding: 30px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.3);
+          box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.3);
+}
+
+.button {
+  background-color: #ff298a;
+  /* Green */
+  border: none;
+  color: white;
+  border-radius: 5px;
+  padding: 5px 5px;
+  -webkit-box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.5);
+          box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.5);
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-left: 3%;
+}
+
+.inputText {
+  margin-top: 2%;
+  border: none;
+  border-radius: 5px;
+  background-color: white;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.5);
+          box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.5);
+  color: gray;
+  width: 300px;
+  height: 30px;
+}
+
+::-webkit-input-placeholder {
+  font-size: 14px;
+  color: gray;
+  padding: 10px;
+}
+
+:-ms-input-placeholder {
+  font-size: 14px;
+  color: gray;
+  padding: 10px;
+}
+
+::-ms-input-placeholder {
+  font-size: 14px;
+  color: gray;
+  padding: 10px;
+}
+
+::placeholder {
+  font-size: 14px;
+  color: gray;
+  padding: 10px;
+}
+
+.marca {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  color: white;
+  padding-top: 2%;
+}
+
+.marca img {
+  width: 2%;
 }
 /*# sourceMappingURL=styles.css.map */
