--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,8 +9,114 @@
 
 .App {
   background: #1bd6ff;
-  z-index: -1;
   padding: 4% 0;
+}
+
+.newsletter {
+  color: #686868;
+  background-color: white;
+  padding: 10% 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.newsletter__box {
+  padding: 30px;
+  border-radius: 5px;
+  -webkit-box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.3);
+          box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.3);
+}
+
+.button {
+  background-color: #ff298a;
+  /* Green */
+  border: none;
+  color: white;
+  border-radius: 5px;
+  padding: 5px 5px;
+  -webkit-box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.5);
+          box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.5);
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-left: 3%;
+}
+
+.inputText {
+  margin-top: 2%;
+  border: none;
+  border-radius: 5px;
+  background-color: white;
+  border-radius: 10px;
+  -webkit-box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.5);
+          box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.5);
+  color: gray;
+  width: 300px;
+  height: 30px;
+}
+
+::-webkit-input-placeholder {
+  font-size: 14px;
+  color: gray;
+  padding: 10px;
+}
+
+:-ms-input-placeholder {
+  font-size: 14px;
+  color: gray;
+  padding: 10px;
+}
+
+::-ms-input-placeholder {
+  font-size: 14px;
+  color: gray;
+  padding: 10px;
+}
+
+::placeholder {
+  font-size: 14px;
+  color: gray;
+  padding: 10px;
+}
+
+.marca {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  color: white;
+  padding-top: 2%;
+}
+
+.marca img {
+  width: 2%;
+}
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 45px;
+  }
+  p {
+    font-size: 12px;
+  }
+  h3 {
+    font-size: 12px;
+  }
 }
 
 .nav {
@@ -31,6 +137,19 @@
 
 .nav__cupon {
   color: white;
+}
+
+.nav img {
+  width: 100%;
+}
+
+@media (max-width: 600px) {
+  .nav img {
+    width: 60%;
+  }
+  .nav__cupon {
+    font-size: 12px;
+  }
 }
 
 .banner {
@@ -62,6 +181,9 @@
           flex-direction: column;
   width: 50%;
   color: white;
+  -webkit-box-ordinal-group: 2;
+      -ms-flex-order: 1;
+          order: 1;
 }
 
 .banner__text-input {
@@ -78,10 +200,81 @@
   display: flex;
   width: 50%;
   padding: 3%;
+  -webkit-box-ordinal-group: 4;
+      -ms-flex-order: 3;
+          order: 3;
 }
 
 .banner__imagen img {
   width: 100%;
+}
+
+.button__hidden {
+  display: none;
+}
+
+@media (max-width: 600px) {
+  .banner {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+    width: 90%;
+    margin-bottom: 10%;
+  }
+  .banner__text {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 90%;
+    color: white;
+  }
+  .banner__text-input {
+    margin-top: 5%;
+  }
+  .banner__text h1 {
+    font-size: 45px;
+  }
+  .banner__text p {
+    font-size: 14px;
+  }
+  .banner__imagen {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 80%;
+    padding: 3%;
+  }
+  .banner__imagen img {
+    width: 100%;
+  }
+  .button {
+    display: none;
+  }
+  .button__hidden {
+    display: block;
+    background-color: #ff298a;
+    /* Green */
+    border: none;
+    color: white;
+    border-radius: 50px;
+    padding: 8px 10px;
+    -webkit-box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.5);
+            box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.5);
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin-left: 10px;
+  }
+  .inputText {
+    width: 150px;
+    height: 30px;
+  }
 }
 
 .values {
@@ -250,6 +443,53 @@
   z-index: 1;
 }
 
+@media (max-width: 600px) {
+  .values__box {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    width: 60%;
+    padding: 5%;
+    margin-left: 20%;
+  }
+  .values__box-one {
+    margin-bottom: 5%;
+  }
+  .values__box-two {
+    margin-bottom: 5%;
+  }
+  .values__box-three {
+    margin-bottom: 5%;
+  }
+  .values__box h3 {
+    font-size: 14px;
+    text-align: center;
+  }
+  .values__box img {
+    width: 20%;
+  }
+  .values__what {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  .values__what img {
+    width: 80%;
+    margin-left: 10%;
+  }
+}
+
 .gomunch {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -294,100 +534,5 @@
 .gomunch p {
   margin: 5%;
   padding: 5%;
-}
-
-.newsletter {
-  color: #686868;
-  background-color: white;
-  padding: 10% 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-}
-
-.newsletter__box {
-  padding: 30px;
-  border-radius: 5px;
-  -webkit-box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.3);
-          box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.3);
-}
-
-.button {
-  background-color: #ff298a;
-  /* Green */
-  border: none;
-  color: white;
-  border-radius: 5px;
-  padding: 5px 5px;
-  -webkit-box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.5);
-          box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.5);
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin-left: 3%;
-}
-
-.inputText {
-  margin-top: 2%;
-  border: none;
-  border-radius: 5px;
-  background-color: white;
-  border-radius: 10px;
-  -webkit-box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.5);
-          box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.5);
-  color: gray;
-  width: 300px;
-  height: 30px;
-}
-
-::-webkit-input-placeholder {
-  font-size: 14px;
-  color: gray;
-  padding: 10px;
-}
-
-:-ms-input-placeholder {
-  font-size: 14px;
-  color: gray;
-  padding: 10px;
-}
-
-::-ms-input-placeholder {
-  font-size: 14px;
-  color: gray;
-  padding: 10px;
-}
-
-::placeholder {
-  font-size: 14px;
-  color: gray;
-  padding: 10px;
-}
-
-.marca {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 100%;
-  color: white;
-  padding-top: 2%;
-}
-
-.marca img {
-  width: 2%;
 }
 /*# sourceMappingURL=styles.css.map */
