--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -10,193 +10,9 @@ $pink: #ff298a;
 $gray: #686868;
 .App {
   background: $blue;
-  z-index: -1;
   padding: 4% 0;
 }
-.nav {
-  display: flex;
-  justify-content: space-between;
-  width: 90%;
-  align-items: center;
-  margin-left: 5%;
-  margin-top: 2%;
-  margin-bottom: 5%;
 
-  &__cupon {
-    color: white;
-  }
-}
-.banner {
-  display: flex;
-  flex-direction: row;
-  width: 90%;
-  justify-content: space-between;
-  align-items: center;
-  margin-left: 5%;
-  padding: 0 5%;
-
-  &__text {
-    display: flex;
-    flex-direction: column;
-    width: 50%;
-    color: white;
-
-    &-input {
-      margin-top: 5%;
-    }
-
-    h1 {
-      font-size: 50px;
-    }
-  }
-  &__imagen {
-    display: flex;
-    width: 50%;
-    padding: 3%;
-
-    img {
-      width: 100%;
-    }
-  }
-}
-
-.values {
-  color: $gray;
-  background-color: white;
-  padding-top: 8%;
-  z-index: -3;
-
-  &__title {
-    margin-left: 10%;
-    border-left: 4px solid $pink;
-    padding: 0 2%;
-  }
-  &__box {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 90%;
-    padding: 5%;
-    margin: 0 5%;
-
-    &-one {
-      display: flex;
-      width: 100%;
-      flex-direction: column;
-      align-items: center;
-      border-radius: 5px;
-      box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.3);
-      margin-right: 5%;
-      img {
-        color: $blue;
-        width: 30%;
-        margin-top:  5%;
-      }
-      h3{
-        padding: 0 10%;
-      }
-    }
-    &-two {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-      border-radius: 5px;
-      box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.3);
-      margin-right: 5%;
-      color: $blue;
-      img {
-        color: $blue;
-        width: 30%;
-        margin-top:  5%;
-      }
-      h3{
-        padding: 0 10%;
-      }
-    }
-    &-three {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-      border-radius: 5px;
-      box-shadow: 0px 0px 30px rgba(161, 161, 161, 0.3);
-      margin-right: 5%;
-
-      img {
-        color: $blue;
-        width: 30%;
-        margin-top:  5%;
-      }
-      h3{
-        padding: 0 10%;
-      }
-    }
-    h3 {
-      font-size: 16px;
-      color: $pink;
-      margin-top: 10%;
-      margin-bottom: 10%;
-    }
-  }
-  &__what {
-    margin-top: 10%;
-    display: flex;
-    justify-content: space-between;
-    padding: 0 5%;
-    position: relative;
-
-    &-left {
-      width: 80%;
-      z-index: 2;
-      p {
-        margin-top: 15%;
-        margin-left: 10%;
-        z-index: 2;
-      }
-    }
-    &-right {
-      display: flex;
-      width: 100%;
-
-      img {
-        width: 100%;
-        z-index: 2;
-      }
-    }
-  }
-}
-#background {
-  position: absolute;
-  top: 50%;
-  left: 0px;
-  width: 100%;
-  height: 50%;
-  background-color: $blue;
-  z-index: 1;
-}
-.gomunch {
-  display: flex;
-  flex-direction: column;
-  color: white;
-  width: 90%;
-  align-items: center;
-
-  &__top {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-  &__bottom {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-  p {
-    margin: 5%;
-    padding: 5%;
-  }
-}
 .newsletter {
   color: $gray;
   background-color: white;
@@ -251,3 +67,21 @@ $gray: #686868;
     width: 2%;
   }
 }
+
+@media (max-width: 600px) {
+  h1 {
+    font-size: 45px;
+  }
+  p {
+    font-size: 12px;
+  }
+  h3 {
+    font-size: 12px;
+  }
+  
+}
+
+@import "./Nav";
+@import "./Banner";
+@import "./Values";
+@import "./Go";
