--- a/src/css/_Go.scss
+++ b/src/css/_Go.scss
@@ -20,3 +20,18 @@
     padding: 5%;
   }
 }
+
+@media (max-width: 600px) {
+    .gomunch{
+        img{
+            width: 80%;
+            margin-left: 15%;
+        }
+        &__top{
+            flex-direction: column-reverse;
+        }
+        &__bottom{
+            flex-direction: column;
+        }
+    }
+}
