--- a/src/css/_Go.scss
+++ b/src/css/_Go.scss
@@ -20,18 +20,29 @@
     padding: 5%;
   }
 }
+.values__what {
+  margin-top: 10%;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 5%;
+  position: relative;
 
-@media (max-width: 600px) {
-    .gomunch{
-        img{
-            width: 80%;
-            margin-left: 15%;
-        }
-        &__top{
-            flex-direction: column-reverse;
-        }
-        &__bottom{
-            flex-direction: column;
-        }
+  &-left {
+    width: 80%;
+    z-index: 2;
+    p {
+      margin-top: 15%;
+      margin-left: 10%;
+      z-index: 2;
     }
+  }
+  &-right {
+    display: flex;
+    width: 100%;
+
+    img {
+      width: 100%;
+      z-index: 2;
+    }
+  }
 }
